bug fix:
At some screen sizes, the background for the h1 would overlap the logo. Only on pages with lots of content in the h1 though.

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -951,7 +951,7 @@ a {
 
         >div {
             background-color: $navy;
-            margin-top: -100px !important;
+            margin-top: -80px !important;
             padding: 70px 20px 70px 0;
             border-radius: 100px;
         }
